--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_ENV=local
-APP_KEY=base64:JgBVl9sE+v95T9QyRcftoE4cXYRIWWAN9D/ut0v+1qE=
+APP_KEY=base64:su422UzJO5z669KwMYTl2bK6OfIeGa/D/BdbssHfSj8=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -22,9 +22,9 @@ REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
 MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_PORT=465
+MAIL_USERNAME=2854b70eb3cee1
+MAIL_PASSWORD=6cd484fafdb408
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
