--- a/.env
+++ b/.env
@@ -21,11 +21,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=465
-MAIL_USERNAME=2854b70eb3cee1
-MAIL_PASSWORD=6cd484fafdb408
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=yasminemohamed2093@gmail.com
+MAIL_PASSWORD=bgdouqhymmqunlwr
+MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
 PUSHER_KEY=
